# summarization-peft

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
data/: test.jsonl  val.jsonl
src/: train.py  utils.py
src/adapters/: constants.py  factory.py  params.py  test.ipynb
src/adapters/configs/: lora.json  p_tuning.json  prefix_tuning.json  prompt_tuning.json
src/configs/: train_config.json
src/notebooks/: data_preparation.ipynb
