[project]
name = "summarization-peft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py>=2.3.1",
    "bert-score>=0.3.13",
    "clearml>=2.0.2",
    "datasets>=4.1.1",
    "evaluate>=0.4.6",
    "ipywidgets>=8.1.7",
    "nltk>=3.9.2",
    "peft>=0.17.1",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "rouge-score>=0.1.2",
    "ruff>=0.13.3",
    "trl>=0.23.1",
]
